--- a/web-page/index.html
+++ b/web-page/index.html
@@ -19,23 +19,24 @@
         <div id="controls">
             <h2>Adjust Model Parameters</h2>
             <div>
-                <label for="slider1">Parameter 1:</label>
-                <input type="range" id="slider1" name="slider1" min="0" max="100" value="50">
-                <span id="value1">50</span>
+                <label for="floorHeight">Floor Height:</label>
+                <input type="range" id="floorHeight" name="Floor Height" min="1.0" max="5.0" step="0.1" value="3.0">
+                <span id="value1">3.0</span>
             </div>
             <div>
-                <label for="slider2">Parameter 2:</label>
-                <input type="range" id="slider2" name="slider2" min="0" max="100" value="50">
-                <span id="value2">50</span>
+                <label for="floorNum">Number of Floors:</label>
+                <input type="range" id="floorNum" name="Floor Number" min="1" max="50" value="16">
+                <span id="value2">16</span>
             </div>
             <div>
-                <label for="slider3">Parameter 3:</label>
-                <input type="range" id="slider3" name="slider3" min="0" max="100" value="50">
-                <span id="value3">50</span>
+                <label for="attractorPtSeed">Attractor Point Seed:</label>
+                <input type="range" id="attractorPtSeed" name="Attractor Point Seed" min="0" max="10" value="0">
+                <span id="value3">0</span>
             </div>
             <div>
-                <label for="number3">Parameter 4:</label>
-                <input type="number" id="number3" name="number3" min="0" max="100" value="50">
+                <label for="attractorPtStrength">Attractor Point Strength:</label>
+                <input type="range" id="attractorPtStrength" name="Attractor Point Strength" min="0" max="1" step="0.01" value="0.12">
+                <span id="value4">0.12</span>
             </div>
             <button id="saveButton">Save Settings</button>
             <button id="refreshButton">Refresh Model</button>
