--- a/web-page/index.html
+++ b/web-page/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facade Analysis Viewer</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
+    <div id="navbar">
+        <div id="nav-links">
+            <a href="index.html">Home</a>
+            <a href="inspiration.html">Inspiration</a>
+            <a href=how.html>How it works</a>
+        </div>
+        <div id="social-links">
+            <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
+    </div>
+    </div>
 <div id="header">
     <h1>Facade Analysis Viewer</h1>
     <p>Explore real-time model analysis and statistics.</p>
