Add footer, credit ChatGPT

--- a/web-page/index.html
+++ b/web-page/index.html
@@ -23,7 +23,7 @@
     </div>
 <div id="header">
     <h1>Facade Analysis Viewer</h1>
-    <p>Explore real-time model analysis and statistics.</p>
+    <p>Woah! Check out this sick facade!</p>
 </div>
 <div id="main">
     <div id="viewer-container">
@@ -85,5 +85,9 @@
 <!-- Custom Scripts -->
 <script src="js/viewer.js"></script>
 <script src="js/sliders.js"></script>
+
+<div id="footer">
+    <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
+</div>
 </body>
 </html>
