--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -21,4 +21,7 @@
         </div>
     </div>
 
+    <div id="footer">
+        <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
+    </div>
 </body>
