Revert to old design

--- a/web-page/index.html
+++ b/web-page/index.html
@@ -12,14 +12,13 @@
         <div id="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
-            <a href=how.html>How it works</a>
+            <a href=sources.html>Sources</a>
         </div>
         <div id="social-links">
             <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
-    </div>
     </div>
 <div id="header">
     <h1>Facade Analysis Viewer</h1>
