--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -12,7 +12,7 @@
         <div id="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
-            <a href=how.html>How it works</a>
+            <a href=sources.html>Sources</a>
         </div>
         <div id="social-links">
             <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
