--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -6,13 +6,22 @@
     <title>Facade Analysis Viewer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        .pinterest-board {
+            width: 100%;
+            height: 100vh; /* 100% height of the viewport */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
 <body>
     <div id="navbar">
         <div id="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
-            <a href=sources.html>Sources</a>
+            <a href="sources.html">Sources</a>
         </div>
         <div id="social-links">
             <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
@@ -20,8 +29,14 @@
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
+    <h1>Facade Inspiration</h1>
+    <div class="pinterest-board">
+        <a data-pin-do="embedBoard" href="https://www.pinterest.com.au/fatphishy/code2132/"></a>
+        <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+    </div>
 
     <div id="footer">
         <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
     </div>
 </body>
+</html>
