--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -17,13 +17,13 @@
     </style>
 </head>
 <body>
-    <div id="navbar">
-        <div id="nav-links">
+    <div id="navbar" class="navbar">
+        <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
-        <div id="social-links">
+        <div class="social-links">
             <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
