--- a/web-page/index.html
+++ b/web-page/index.html
@@ -8,22 +8,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <div id="navbar">
-        <div id="nav-links">
+    <div id="navbar" class="navbar">
+        <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
-        <div id="social-links">
+        <div class="social-links">
             <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
+    
     <div id="header">
         <h1>Facade Analysis Viewer</h1>
         <p>Woah! Check out this sick facade!</p>
     </div>
+
     <div id="main">
         <div id="viewer-container">
             <div id="viewer"></div>
