--- a/web-page/sources.html
+++ b/web-page/sources.html
@@ -15,7 +15,7 @@
             <a href="sources.html">Sources</a>
         </div>
         <div class="social-links">
-            <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/louissabri/CODE2132" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
