--- a/web-page/index.html
+++ b/web-page/index.html
@@ -15,7 +15,7 @@
             <a href="sources.html">Sources</a>
         </div>
         <div class="social-links">
-            <a href="https://github.com/louissabri" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/louissabri/CODE2132" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://www.instagram.com/louissabrii" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
@@ -70,7 +70,7 @@
                     <span class="analysis-value" id="numberGlassPanes">0</span>
                 </div>
                 <div class="analysis-item">
-                    <span class="analysis-label">Total Cost of Panels:</span>
+                    <span class="analysis-label">Total Cost of Materials for    Panels:</span>
                     <span class="analysis-value" id="totalCostPanels">0</span>
                     <a href="sources.html">(ecospecifier)</a>
                 </div>
@@ -84,7 +84,7 @@
                     <span class="analysis-value" id="numberMetalFins">0</span>
                 </div>
                 <div class="analysis-item">
-                    <span class="analysis-label">Total Cost of Metal Fins:</span>
+                    <span class="analysis-label">Total Cost of Materals for Metal Fins:</span>
                     <span class="analysis-value" id="totalCostMetalFins">0</span>
                     <a href="sources.html">(allmetalsinc)</a>
                 </div>
