--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Facade Analysis Viewer</title>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <title>Facade Inspiration</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         .pinterest-board {
             width: 100%;
-            height: 100vh; /* 100% height of the viewport */
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -17,7 +18,7 @@
     </style>
 </head>
 <body>
-    <div id="navbar" class="navbar">
+    <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
@@ -34,9 +35,16 @@
         <a data-pin-do="embedBoard" href="https://www.pinterest.com.au/fatphishy/code2132/"></a>
         <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
     </div>
-
-    <div id="footer">
+    <section>
+        <p>
+            My facade design draws direct inspiration from the images on the Pinterest board. The interplay of light and shadow created by the metal fins in those images captivated me. I sought to recreate that dynamic shading effect in my design, ensuring the building not only looks aesthetically appealing but also provides functional shading.
+        </p>
+        <p>
+            The metal fins give the facade a sleek, modern look. Their vertical alignment and subtle curves add a sense of fluidity and movement, much like the examples I found on Pinterest. These fins create an ever-changing visual experience as the sun moves, enhancing the building's aesthetic appeal throughout the day.
+        </p>
+    </section>
+    <footer>
         <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
-    </div>
+    </footer>
 </body>
 </html>
