--- a/web-page/sources.html
+++ b/web-page/sources.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <title>Sources</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <div id="navbar" class="navbar">
+    <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="inspiration.html">Inspiration</a>
@@ -20,7 +21,6 @@
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
-    </div>
     <h1>Citations</h1>
     <ul>
         <li>ecospecifier. (n.d.). Glass Pricing & Window Costs. Retrieved from <a href="https://www.ecospecifier.com.au/glass-pricing-window-costs/">https://www.ecospecifier.com.au/glass-pricing-window-costs/</a></li>
@@ -28,8 +28,8 @@
         <li>All Metals Inc. (n.d.). Stainless Sheet 18 Grade 304. Retrieved from <a href="https://allmetalsinc.com/products/stainless-sheet-18-grade-304?variant=40797824319548">https://allmetalsinc.com/products/stainless-sheet-18-grade-304?variant=40797824319548</a></li>
         <li>Online Metals. (n.d.). Stainless Steel Sheet & Plate. Retrieved from <a href="https://www.onlinemetals.com/en/buy/stainless-steel-sheet-plate">https://www.onlinemetals.com/en/buy/stainless-steel-sheet-plate</a></li>
     </ul>
-      
-    <div id="footer">
+    <footer>
         <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
-    </div>
+    </footer>
 </body>
+</html>
