add floor plans page, set-up floorplans viewer js

--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -21,6 +21,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
+            <a href="floors.html">Floor Plans</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
