--- a/web-page/floors.html
+++ b/web-page/floors.html
@@ -22,9 +22,70 @@
             <a href="https://www.linkedin.com/in/louissabri" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
-
+    <header>
+        <h1>Floor Plan Viewer</h1>
+        <p>Woah! Check out this sick floor plan!</p>
+    </header>
     <main>
-        <div id="floors-viewer-container">
-            <div id="floorsViewer"></div>
+        <div id="viewer-container">
+            <div id="legend">
+                <h2>Legend</h2>
+                <ul>
+                    <li><span class="legend-color" style="background-color: #ffa6a6;"></span>Meeting</li>
+                    <li><span class="legend-color" style="background-color: #d0ff65;"></span>Bathrooms</li>
+                    <li><span class="legend-color" style="background-color: #ffffc1;"></span>Kitchen</li>
+                    <li><span class="legend-color" style="background-color: #ffc1ff;"></span>Staircase</li>
+                    <li><span class="legend-color" style="background-color: #b8ffff;"></span>Lift</li>
+                </ul>
+            </div>
+            <div id="viewer"></div>
         </div>
+        <aside id="info">
+            <section id="controls">
+                <h2>Adjust Floor Plan Parameters</h2>
+                <div>
+                    <label for="gridDivisions">Grid Divisions:</label>
+                    <input type="range" id="gridDivisions" name="Grid Divisions" min="3" max="20" step="1" value="7">
+                    <span id="value1">7</span>
+                </div>
+                <div>
+                    <label for="cullCurveScaleFactor">Cull Scale Factor:</label>
+                    <input type="range" id="cullCurveScaleFactor" name="Cull Scale Factor" min="0.00" max="1.00" step="0.01" value="0.75">
+                    <span id="value2">0.75</span>
+                </div>
+                <div>
+                    <label for="minOfficeSize">Minimum Office Size (sqm):</label>
+                    <input type="range" id="minOfficeSize" name="Minimum Office Size" min="0.0" max="20.0" step="0.1" value="13.0">
+                    <span id="value3">13.0</span>
+                </div>
+                <div>
+                    <label for="liftX">Lift X Size (m):</label>
+                    <input type="range" id="liftX" name="Lift X Size" min="0.0" max="5.0" step="0.1" value="1.4">
+                    <span id="value4">1.4</span>
+                </div>
+                <div>
+                    <label for="liftY">Lift Y Size (m):</label>
+                    <input type="range" id="liftY" name="Lift Y Size" min="0.0" max="5.0" step="0.1" value="1.6">
+                    <span id="value5">1.6</span>
+                </div>
+                <div>
+                    <label for="pathSubD">Path Sub-Divisions:</label>
+                    <input type="range" id="pathSubD" name="Path Sub-Divisions" min="0" max="500" step="1" value="200">
+                    <span id="value6">200</span>
+                </div>
+                <button id="saveButton">Save Settings</button>
+                <button id="refreshButton">Refresh Model</button>
+            </section>
+        </aside>
     </main>
+    <footer>
+        <p>This project includes code generated with the assistance of ChatGPT, an AI language model developed by OpenAI.</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/pmrem/PMREMGenerator.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/pmrem/PMREMCubeUVPacker.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/pmrem/PMREMCubeUVRenderer.js"></script>
+    <script src="js/floors.js"></script>
+</body>
+</html>
