--- a/web-page/index.html
+++ b/web-page/index.html
@@ -12,6 +12,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
+            <a href="floorplans.html">Floor Plans</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
