--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -21,7 +21,7 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="floors.html">Floor Plans</a>
+            <a href="floorplans.html">Floor Plans</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
@@ -42,6 +42,19 @@
         </p>
         <p>
             The metal fins give the facade a sleek, modern look. Their vertical alignment and subtle curves add a sense of fluidity and movement, much like the examples I found on Pinterest. These fins create an ever-changing visual experience as the sun moves, enhancing the building's aesthetic appeal throughout the day.
+        </p>
+    </section>
+    <h1>Floorplan Inspiration</h1>
+    <div class="pinterest-board">
+        <a data-pin-do="embedBoard" href="https://www.pinterest.com.au/fatphishy/code2132-floorplans/"></a>
+        <script async defer src="//assets.pinterest.com/js/pinit.js"></script>
+    </div>
+    <section>
+        <p>
+            My research into circular building layouts significantly informed and inspired my floor plan design. Analysing these floor plans helped me integrate a centralised building core with essential features like lifts, staircases, toilets, and kitchens. This design ensures efficient circulation and maximises space use while promoting equal access to natural light and ventilation.
+        </p>
+        <p>
+            The benefits of an open plan office include fostering collaboration, improving communication, and offering workspace flexibility. However, inspired by the layouts on shown on the Pinterest board, I incorporated separate meeting rooms to provide private spaces for focused work and confidential discussions. This balance enhances productivity and caters to diverse working styles in a modern office environment.
         </p>
     </section>
     <footer>
