--- a/web-page/floorplans.html
+++ b/web-page/floorplans.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-    <title>Facade Analysis Viewer</title>
+    <title>Floor Plan Analysis Viewer</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -17,6 +17,7 @@
         <div class="nav-links">
             <a href="index.html">Home</a>
             <a href="floorplans.html">Floor Plans</a>
+            <a href="map.html">Map</a>
             <a href="inspiration.html">Inspiration</a>
             <a href="sources.html">Sources</a>
         </div>
@@ -101,7 +102,7 @@
                     <span class="analysis-value" id="minWalkSpeed">0 </span>
                     <a href="https://doi.org/10.1007/s00221-007-0917-0" target="_blank">(Source)</a>
                 </div>
-                <!---
+                <!--
                 <div class="analysis-item">
                     <span class="analysis-label">Cost</span>
                     <span >$1,000,000</span>
