--- a/web-page/floorplans.html
+++ b/web-page/floorplans.html
@@ -15,7 +15,7 @@
     </div>
     <div class="navbar">
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="index.html">Facade</a>
             <a href="floorplans.html">Floor Plans</a>
             <a href="map.html">Map</a>
             <a href="inspiration.html">Inspiration</a>
