--- a/web-page/inspiration.html
+++ b/web-page/inspiration.html
@@ -20,7 +20,7 @@
 <body>
     <div class="navbar">
         <div class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="index.html">Facade</a>
             <a href="floorplans.html">Floor Plans</a>
             <a href="map.html">Map</a>
             <a href="inspiration.html">Inspiration</a>
