--- a/web-page/map.html
+++ b/web-page/map.html
@@ -47,7 +47,7 @@
             <aside id="info">
                 <section id="controls">
                     <h2>Adjust Map Parameters</h2>
-                    <h3>Click to select a point:</h3>
+                    <h3>Click to select a point, building will be placed on closest suitable block:</h3>
                     <div id="selection-box">
                         <div id="clickable-box"></div>
                         <div id="selected-point"></div>
@@ -58,8 +58,18 @@
                     </div>
                     <div>
                         <label for="walkRadius">Walkable Amenity Radius Max Time (mins):</label>
-                        <input type="range" id="gridDivsNum" name="Number of Grid Divisions" min="1" max="20" step="1">
+                        <input type="range" id="walkRadius" name="Walkable Amenity Radius Max Time (mins)" min="1" max="60" step="0.1">
                         <span id="value1">5</span>
+                    </div>
+                    <div>
+                        <label for="minBlockSize">Minimum Block Size (m):</label>
+                        <input type="range" id="minBlockSize" name="Minimum Block Size (m)" min="0" max="10000" step="5">
+                        <span id="value2">5</span>
+                    </div>
+                    <div>
+                        <label for="maxBlockSize">Maximum Block Size (m):</label>
+                        <input type="range" id="maxBlockSize" name="Minimum Block Size (m)" min="0" max="10000" step="5">
+                        <span id="value3">5</span>
                     </div>
                     <button id="saveButton">Save Settings</button>
                     <button id="refreshButton">Refresh Model</button>
@@ -68,7 +78,15 @@
                     <h2>Model Analysis Outputs</h2>
                     <div class="analysis-item">
                         <span class="analysis-label">Mean Walk Score:</span>
-                        <span class="analysis-value" id="maxWalk">0</span>
+                        <span class="analysis-value" id="meanWalkScore">0</span>
+                    </div>
+                    <div class="analysis-item">
+                        <span class="analysis-label">Max Walk Score:</span>
+                        <span class="analysis-value" id="maxWalkScore">0</span>
+                    </div>
+                    <div class="analysis-item">
+                        <span class="analysis-label">Min Walk Score:</span>
+                        <span class="analysis-value" id="minWalkScore">0</span>
                     </div>
                 </section>
             </aside>
@@ -84,5 +102,6 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/pmrem/PMREMCubeUVPacker.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/pmrem/PMREMCubeUVRenderer.js"></script>
     <script src="js/mapViewer.js"></script>
+    <script src="js/mapSliders.js"></script>
 </body>
 </html>
